--- a/websns-app/templates/login.html
+++ b/websns-app/templates/login.html
@@ -19,7 +19,7 @@
       </div>
       <div class="form-footer"></div>
         <a href="/register">新規登録</a>
-        <button type="submit">登録</button>
+        <button type="submit">Login</button>
       </div>
     </form>
   </div>
